--- a/projects/input/package.json
+++ b/projects/input/package.json
@@ -1,6 +1,6 @@
 {
   "name": "input",
-  "version": "0.0.1",
+  "version": "q",
   "peerDependencies": {
     "@angular/common": "^11.2.14",
     "@angular/core": "^11.2.14"
