--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "cz-conventional-changelog": "^3.3.0",
+    "cz-conventional-changelog-with-jiraid-detection": "^1.0.3",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.1.0",
@@ -48,7 +49,7 @@
   },
   "config": {
     "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
+      "path": "./node_modules/cz-conventional-changelog-with-jiraid-detection"
     }
   }
 }
